--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -1,6 +1,14 @@
 ul {
   list-style-type: none;
   padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+ul li {
+  margin: 10px;
 }
 
 .cart {
