--- a/src/global.css
+++ b/src/global.css
@@ -15,7 +15,8 @@
 
 body {
   background-color: #fafafa;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    sans-serif;
   padding: 20px 20px 40px 20px;
 }
 
@@ -122,4 +123,17 @@ a.mindblow:hover {
   border-bottom-width: 0px;
   margin-bottom: 4px;
   transform: translateY(4px);
+}
+
+button.link {
+  background: none !important;
+  font-size: 16px;
+  border: none;
+  padding: 0 !important;
+  color: var(--qwik-dark-blue);
+  cursor: pointer;
+}
+
+button.link:hover {
+  text-decoration: underline;
 }
