--- a/src/routes/login/index.css
+++ b/src/routes/login/index.css
@@ -1,32 +1,6 @@
-/* Bordered form */
 form {
     border: 3px solid var(--qwik-dark-purple);
-}
-
-/* Full-width inputs */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid var(--qwik-light-purple);
-    box-sizing: border-box;
-}
-
-/* Set a style for all buttons */
-button {
-    background-color: var(--qwik-light-blue);
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-}
-
-/* Add a hover effect for buttons */
-button:hover {
-    opacity: 0.8;
+    border-radius: 5px;
 }
 
 /* Add padding to containers */
@@ -38,4 +12,10 @@ button:hover {
 span.psw {
     float: right;
     padding-top: 16px;
+}
+
+.login {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
