--- a/src/components/cart/cartItem.css
+++ b/src/components/cart/cartItem.css
@@ -1,11 +1,25 @@
+.cartItem {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    width: 250px;
+    height: 300px;
+}
+
+.cartItem:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.cartItem .container {
+    padding: 2px 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 img {
     width: 50px;
     height: 50px;
-    vertical-align: middle;
-}
-
-.cartItem {
-
 }
 
 .qty {
