--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,9 +1,24 @@
-img {
-  width: 50px;
-  height: 50px;
-  vertical-align: middle;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  width: 250px;
+  height: 300px;
 }
 
-div {
-  width: 250px;
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
+.card .container {
+  padding: 2px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card img {
+  width: 100px;
+  height: 100px;
+}
+
