--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,11 +7,17 @@ header {
 header .logo a {
   display: inline-block;
   padding: 10px 10px 7px 20px;
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--qwik-dark-blue);
+  text-align: left;
+  margin: 10px 0;
+  text-decoration: none;
 }
 
 header ul {
   margin: 0;
-  padding: 3px 10px 0 0;
+  padding: 15px 10px 0 0;
   list-style: none;
   flex: 1;
   text-align: right;
