--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -1,7 +1,7 @@
 section {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: end;
   padding: 0;
   justify-content: space-between;
 }
@@ -27,3 +27,15 @@ ul li {
   width: 150px;
   text-align: right;
 }
+
+.cart .goToCart {
+  width: 150px;
+  height: 40px;
+  display: flex;
+  place-items: center;
+}
+
+.cart .goToCart div {
+  width: 100%;
+}
+
