Small style refactor in cart page

--- a/src/routes/cart/index.css
+++ b/src/routes/cart/index.css
@@ -12,7 +12,7 @@ ul li {
 .total {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
