--- a/src/components/cart/cartItem.css
+++ b/src/components/cart/cartItem.css
@@ -1,44 +1,9 @@
-.cartItem {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    width: 250px;
-    height: 300px;
-}
-
-.cartItem:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.cartItem .container {
-    padding: 2px 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 img {
+    margin: 5px;
     width: 50px;
     height: 50px;
 }
 
-.qty {
-
-}
-
-.description {
-    line-height: 10px;
-    font-size: 18px;
-    font-family: ‘Open Sans’;
-    font-weight: 600;
-    color: #909090;
-}
-
-.price {
-    height: 100%;
-    text-align: right;
-}
-
-.total {
-
+a {
+    text-decoration: none;
 }
