--- a/src/routes/cart/index.css
+++ b/src/routes/cart/index.css
@@ -1,14 +1,3 @@
-ul {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-ul li {
-    margin: 20px;
-}
-
 .total {
     width: 100%;
     display: flex;
@@ -19,4 +8,38 @@ ul li {
 
 button {
     margin-left: 20px;
+}
+
+.boxHeader {
+    display: flex;
+    height: 38px;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+    background-color: #949494;
+    justify-content: center;
+    align-items: center;
+}
+
+.boxHeader > .header {
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFF;
+}
+
+.cartBottom {
+    display: flex;
+    height: 38px;
+    color: #FFF;
+    font-size: 15px;
+    font-weight: bold;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #949494;
+    align-items: center;
+    justify-content: end;
+    padding-right: 10px;
+}
+
+.cartTable {
+    background-color: #fbfbfb;
 }
